<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />


    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/navigation_shop" />


    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_cart"
        android:title="@string/navigation_cart" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/menu_account" />

    <item
        android:id="@+id/navigation_controller"
        android:icon="@drawable/ic_admin"
        android:title="@string/menu_admin" />


</menu>